--- a/.github/workflows/Cats Tests.yml
+++ b/.github/workflows/Cats Tests.yml
@@ -33,7 +33,7 @@ jobs:
         sudo snap install blender_33 --channel 3.3lts/stable --classic
         sudo snap install blender_34 --channel 3.4/stable --classic
         sudo snap install blender_35 --channel 3.5/stable --classic
-        sudo snap install blender_36 --channel 3.6/stable --classic
+        sudo snap install blender_36 --channel 3.6lts/stable --classic
         sudo snap install blender_40 --channel 4.0/stable --classic
         sudo snap install blender_stable --stable --classic
     - name: install cats plugin for various versions
