Add readme to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,9 @@ resources/icons/supporters/**
 resources/supporters.json
 .coverage
 mmd_tools_local2
+README.md
+README
+readme.md
+readme
+readme.txt
+README.text
