--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -2,13 +2,13 @@ schema_version = "1.0.0"
 
 # Unoffical Cats Blender Plugin Extenstion
 id = "cats_blender_plugin"
-version = "4.2.1.0"
+version = "4.2.0"
 name = "Unoffical Cats Blender Plugin"
 tagline = "A tool designed to shorten steps needed to import and optimize models into VRChat"
-maintainer = "Yusarina <hello@yusarina.xyz>"
+maintainer = "Unoffical Cats Team <hello@yusarina.xyz>"
 type = "add-on"
 permissions = ["files", "network"]
-website = "https://github.com/Yusarina/Cats-Blender-Plugin-Unofficial-"
+website = "https://github.com/Unofficalcats/Cats-Blender-Plugin-Unofficial-"
 tags = ["3D View", "Modeling", "Mesh", "Object"]
 blender_version_min = "4.2.0"
 license = [
